db 연결 테스트 성공

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>ore coffe house - coffee & dessert</title>
+    <title>ore coffee house - coffee & dessert</title>
     <link rel="stylesheet" type="text/css" href="../css/home.css" />
 </head>
 <body>
