--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -7,7 +7,7 @@
 
   <div>
     <span><a href="">공간 소개</a></span>
-    <span><a href="">메뉴</a></span>
+    <span><a href="/menu">메뉴</a></span>
   </div>
 
   <div>
