카테고리 불러오기 성공

--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -1,20 +1,14 @@
-@font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
-}
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css");
 
 * {
     box-sizing: border-box;
     margin: 0px;
-    font-family: 'Pretendard-Regular';
+    font-family: 'Pretendard';
 
 }
 
 
 #ore_logo_home {
-
     width: 290px;
 
 }
