--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -11,9 +11,9 @@
   </div>
 
   <div>
-    <span><a href="">로그인</a></span>
-    <span><a href="">회원가입</a></span>
-    <span><a href="">마이페이지</a></span>
+    <span><a href="/login.do">로그인</a></span>
+    <span><a href="/join.do">회원가입</a></span>
+    <span><a href="/myPage">마이페이지</a></span>
   </div>
 
 
