--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -10,7 +10,9 @@
         </div>
 
         <div>
-            <img id="insta_logo" src="../images/insta_logo.png" alt="">
+            <a href="/home ">
+                <img id="insta_logo" src="../images/insta_logo.png" alt=""/>
+            </a>
             <span>Copyright © ore coffee house. All rights reserved.</span>
 
         </div>
