--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,7 +1,9 @@
 <div class="header_ctn" th:fragment="header">
   <link rel="stylesheet" type="text/css" href="../css/header.css" />
   <div>
+    <a href="/home">
     <img id="ore_logo_home" src="../images/ore_logo.png" alt=""/>
+    </a>
   </div>
 
 
@@ -11,8 +13,8 @@
   </div>
 
   <div>
-    <span><a href="/login.do">로그인</a></span>
-    <span><a href="/join.do">회원가입</a></span>
+    <span><a href="/login">로그인</a></span>
+    <span><a href="/join">회원가입</a></span>
     <span><a href="/myPage">마이페이지</a></span>
   </div>
 
