카카오 로그인, 데이터 받아오기 완료 다음엔 세션 & 쿠키를 이용한 로그인 유지 기능 구현 할 것

--- a/src/main/resources/static/css/join.css
+++ b/src/main/resources/static/css/join.css
@@ -4,6 +4,7 @@ height: 40px;
 border:1.2px solid gray;
 opacity: 70%;
 border-radius: 5px;
+padding-left: 10px;
 }
 
 .join_ctn>div{
@@ -35,6 +36,10 @@ width:fit-content;
 bold{
 color:#EA5234;
 
+}
+
+.ctn_tt{
+font-size: 14px;
 }
 
 .please{
