--- a/src/main/resources/templates/header_second.html
+++ b/src/main/resources/templates/header_second.html
@@ -7,8 +7,8 @@
     </div>
 
     <div class="menu_ctn">
-        <span><a href="/login.do">로그인</a></span>
-        <span><a href="/join.do">회원가입</a></span>
+        <span><a href="/logino">로그인</a></span>
+        <span><a href="/join">회원가입</a></span>
         <span><a href="/myPage">마이페이지</a></span>
     </div>
 
