--- a/src/main/resources/templates/login&join/join.html
+++ b/src/main/resources/templates/login&join/join.html
@@ -18,7 +18,7 @@
             <span class="ctn_tt">이름<bold>*</bold></span>
             <div>
                 <div>
-                    <input class="square" type="text" name="" placeholder="이름"/>
+                    <input class="square" type="text" name="memName" placeholder="이름"/>
                 </div>
             </div>
         </div>
@@ -73,7 +73,8 @@
             <div>카카오 계정으로 이용하실 수 있습니다.</div>
         </div>
 
-        <a href="">
+        <a href="#" onclick="kakaoLogin();" id="kakao-login-btn">
+
             <img class="kakao_login_btn" src="../images/kakao_login.png" alt="">
         </a>
 
@@ -83,7 +84,9 @@
 
 
 </div>
-
+<script type="text/javascript" src="webjars/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+<script type="text/javascript" src="../javascript/join.js"></script>
 
 
 </body>
