공지사항 만듦.. 페이징처리는 아직. 로그인 유지 기능 아직.

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -8,9 +8,13 @@
 }
 
 .carousel-inner{
-    height:500px;
+    height:600px;
 }
 
 #carouselExampleIndicators{
 margin-top: 80px;
+}
+
+.d-block w-100 {
+    height:700px;
 }
