--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -10,7 +10,7 @@
         </div>
 
         <div>
-            <a href="/home ">
+            <a href="https://instagram.com/orecoffeehouse?igshid=MzRlODBiNWFlZA== " target="_blank">
                 <img id="insta_logo" src="../images/insta_logo.png" alt=""/>
             </a>
             <span>Copyright © ore coffee house. All rights reserved.</span>
