--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,15 +1,16 @@
 <div class="header_ctn" th:fragment="header">
   <link rel="stylesheet" type="text/css" href="../css/header.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <div>
     <a href="/home">
     <img id="ore_logo_home" src="../images/ore_logo.png" alt=""/>
     </a>
   </div>
 
-
   <div>
-    <span><a href="">공간 소개</a></span>
+    <span><a href="/ore-place">공간 소개</a></span>
     <span><a href="/menu">메뉴</a></span>
+    <span><a href="/notice">공지 사항</a></span>
   </div>
 
   <div>
