--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,14 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>ore coffee house - coffee & dessert</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../css/home.css" />
+
+    <link rel="stylesheet" type="text/css" href="../css/home.css?after" />
 </head>
 <body>
 
 <div th:replace="/header :: header"></div>
 
-<!--캐러셀 하드코딩-->
+<!--캐러셀-->
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -19,16 +19,16 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="../images/carousel/1.jpg" class="d-block w-100" alt="...">
+            <img src="../images/carousel/5.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="../images/carousel/2.jpg" class="d-block w-100" alt="...">
+            <img src="../images/carousel/6.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="../images/carousel/3.jpg" class="d-block w-100" alt="...">
+            <img src="../images/carousel/7.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="../images/carousel/4.jpg" class="d-block w-100" alt="...">
+            <img src="../images/carousel/8.png" class="d-block w-100" alt="...">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
