--- a/src/main/resources/templates/login&join/join.html
+++ b/src/main/resources/templates/login&join/join.html
@@ -51,7 +51,7 @@
             <span class="ctn_tt">생년월일</span>
             <div>
                 <div class="please">
-                    <input class="square" type="text" name="memBth" placeholder="생년월일"/>
+                    <input class="square" type="date" min="1923-01-01" value="2000-01-01" name="memBth" placeholder="생년월일"/>
                     생년월일을 입력해주시면 생일 쿠폰을 지급해 드립니다.
                 </div>
             </div>
