페이징 처리 완료 로그인 유지 구현은 아직..

--- a/src/main/resources/templates/notice/notice.html
+++ b/src/main/resources/templates/notice/notice.html
@@ -20,27 +20,36 @@
             <input class="search_btn" type="submit" value="검색">
         </form>
     </div>
+    <div class="table_ctn">
+        <table>
 
-    <table>
-        <tr>
-            <th style="width: 5%;">번호</th>
-            <th style="width: 65%; text-align: left">제목</th>
-            <th style="width: 15%;">작성자</th>
-            <th style="width: 10%;">작성일</th>
-            <th style="width: 5%;">조회</th>
-        </tr>
-        <tr th:each="notice : ${notice}">
-            <td th:text="${notice.noticeNo}"></td>
-            <td style="text-align: left" ><a th:href="@{/notice(no=${notice.noticeNo})}" th:text="${notice.noticeTitle}"></a></td>
-            <td th:text="${notice.member.memName}"></td>
-            <td th:text="${notice.noticeDate}"></td>
-            <td th:text="${notice.noticeHit}"></td>
-        </tr>
-    </table>
+            <tr>
+                <th style="width: 8%;">번호</th>
+                <th style="width: 57%; text-align: left">제목</th>
+                <th style="width: 15%;">작성자</th>
+                <th style="width: 12%;">작성일</th>
+                <th style="width: 8%;">조회</th>
+            </tr>
+            <tr th:each="notice : ${notice}">
+                <td th:text="${notice.noticeNo}"></td>
+                <td class="title" style="text-align: left" ><a th:href="@{/notice/contents(no=${notice.noticeNo})}" th:text="${notice.noticeTitle}"></a></td>
+                <td th:text="${notice.member.memName}"></td>
+                <td th:text="${notice.noticeDate}"></td>
+                <td th:text="${notice.noticeHit}"></td>
+            </tr>
+        </table>
+    </div>
 
     <!--pagination-->
-    <div>
-
-
+    <div id="pagination">
+        <th:block th:if=${startPage!=1}>
+        <a class="move" th:href="@{/notice(page=${startPage}-1)}"><</a>
+        </th:block>
+        <th:block th:each="i : ${#numbers.sequence(startPage, endPage)}">
+            <a th:href="@{/notice(page=${i})}"><span th:text="${i}"></span></a>
+        </th:block>
+        <th:block th:if="${startPage < totalPage - (totalPage % 5)}">
+            <a class="move" th:href="@{/notice(page=${endPage}+1)}">></a>
+        </th:block>
     </div>
 </div>
