--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,6 +1,6 @@
 <div class="header_ctn" th:fragment="header">
-  <link rel="stylesheet" type="text/css" href="../css/header.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="../css/header.css?after" />
+
   <div>
     <a href="/home">
     <img id="ore_logo_home" src="../images/ore_logo.png" alt=""/>
