--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -3,7 +3,7 @@
     <div>
 
         <div>
-            <img id="ore_logo_mini" src="../images/ore_mini_logo.png" alt="">
+            <img id="ore_logo_mini" src="../images/ore_logo_white.png" alt="">
             <span>소재지: 경기도 수원시 영통구 광교호수공원로 277 b1층 35호</span>
             <span>대표번호: 010-2035-3196</span>
             <span><a href="">개인정보취급방침 / 이용약관</a></span>
