--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,5 +1,11 @@
+<!DOCTYPE html>
 <div class="header_ctn" th:fragment="header">
+
+  <head>
   <link rel="stylesheet" type="text/css" href="../css/header.css?after" />
+
+  </head>
+
 
   <div>
     <a href="/home">
