--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -8,7 +8,7 @@ padding-left: 10px;
 font-size:15px;
 }
 
-.join_ctn>div{
+.login_ctn>div{
 display:flex;
 flex-direction: row;
 width:380px;
@@ -17,7 +17,7 @@ margin-bottom:10px;
 
 }
 
-.join_ctn {
+.login_ctn {
 margin: auto;
 margin-top: 45px;
 width:380px;
@@ -25,7 +25,7 @@ display:flex;
 flex-direction: column;
 }
 
-.join_text {
+.login_text {
 font-size: 25px;
 font-weight: 500px;
 margin: auto;
@@ -33,41 +33,14 @@ margin-top: 90px;
 width:fit-content;
 }
 
-
-bold{
+b{
 color:#EA5234;
-
-}
-
-.ctn_tt{
-font-size: 15px;
-margin: auto 0px;
-}
-
-.please{
-font-size:12px;
-display:flex;
-flex-direction: column;
 }
 
 .kakao_login_btn{
 width: 380px;
 }
 
-#agreement{
-width: 246px;
-margin: 28px auto;
-}
-
-#another_mtd {
-display:flex;
-flex-direction: column;
-align-items: center;
-}
-
-#another_mtd>div:last-child{
-margin: 20px 0px;
-}
 
 .or{
 display:flex;
@@ -82,8 +55,7 @@ background-color:gray;
 height: 1px;
 
 }
-
-.join_btn{
+.login_btn{
 width:380px;
 height:57px;
 background-color:#EA5234;
@@ -93,6 +65,29 @@ margin:0px auto 40px auto;
 font-size:17px;
 font-weight:200;
 border:none;
+}
+
+#another_mtd {
+display:flex;
+flex-direction: column;
+align-items: center;
+}
+
+#another_mtd>div:last-child{
+margin: 20px 0px;
+}
+
+#auto-login_ctn{
+justify-content: center;
+margin: 30px auto;
+}
+
+#auto-login{
+margin-right: 5px;
+}
+.ctn_tt{
+font-size: 15px;
+margin: auto 0px;
 }
 
 input:focus{
