--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
     <title>ore coffee house - coffee & dessert</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="../bootstrap/css/bootstrap.min.css?after" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="../css/home.css?after" />
-</head>
+    <link rel="shortcut icon" type="image/x-icon" href="../images/1.png"/>
 <body>
 
 <div th:replace="/header :: header"></div>
@@ -41,10 +41,29 @@
     </button>
 </div>
 
-<br><br><br><br><br><br>
+<!--공지사항-->
+<div class="main_notice_ctn">
+    <div class="main_notice_ctn_0">
+        공지사항
+    </div>
+    <div class="main_notice_ctn_1">
+        <span><a>ore coffee house 방문 안내</a></span>
+        <span>2023.09.04</span>
+    </div>
+    <div class="main_notice_ctn_2">
+        <span><button onclick="location.href=''"><i class="bi bi-arrow-left-circle"></i></button></span>
+        <span><button onclick="location.href=''"><i class="bi bi-arrow-right-circle"></i></button></span>
+        <span><button onclick="location.href='/notice'"><i class="bi bi-plus-circle"></i></button></span>
+    </div>
+
+</div>
+
+<br><br><br>오레 홈페이지에 방문한걸 환영한다는 내용이나 보여주고 싶은 거<br><br><br>
+<br><br><br>환영합니다....<br><br><br>
+<br><br><br>오늘은 9월 4일이다...<br><br><br>
 
 
 <div th:replace="/footer :: footer"></div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script type="text/javascript" src="../bootstrap/js/bootstrp.bundle.min.js"></script>
 </body>
 </html>
