--- a/src/main/resources/templates/login&join/join.html
+++ b/src/main/resources/templates/login&join/join.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<th:block th:include="/header_second.html"></th:block>
+<th:block th:include="/header.html"></th:block>
 
 
 <div class="join_text">회원가입</div>
@@ -48,10 +48,10 @@
             </div>
         </div>
         <div>
-            <span class="ctn_tt">생년월일</span>
+            <span class="ctn_tt">생일</span>
             <div>
                 <div class="please">
-                    <input class="square" type="date" min="1923-01-01" value="2000-01-01" name="memBth" placeholder="생년월일"/>
+                    <input class="square" type=date name="memBth" placeholder=""/>
                     생년월일을 입력해주시면 생일 쿠폰을 지급해 드립니다.
                 </div>
             </div>
